[tool.poetry]
name = "gateway"
version = "0.1.0"
description = ""
authors = ["Ibis Prevedello <ibiscp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.9,<4"
docker = "5.0.0"
graphene = ">=2.1.3,<3"
uvicorn = "0.12.3"
spacy = "3.4.1"
requests = "^2.28.1"
umap-learn = "0.5.3"
pandas = "^1.5.2"
graphene-sqlalchemy = "2.3.0"
starlette = "0.14.1"
pyjwt = "2.4.0"


[tool.poetry.group.dev.dependencies]
python-dotenv = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
