[tool.poetry]
name = "gateway"
version = "0.1.0"
description = ""
authors = ["Ibis Prevedello <ibiscp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
docker = "5.0.0"
graphene = "2.1.9"
uvicorn = "0.12.3"
spacy = "3.4.1"
requests = "2.25.1"
umap-learn = "0.5.3"
pandas = "^1.5.2"
graphene-sqlalchemy = "2.3.0"
starlette = "0.14.1"
pyjwt = "2.4.0"
alembic = "1.7.1"

[tool.poetry.group.dev.dependencies]
python-dotenv = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
